# calorie-tracker

./: Makefile  pyproject.toml
anna_calories/domain/: _meals.py
anna_calories/parser/: __init__.py  parse.py
anna_calories/scripts/: run.py
anna_calories/tracker/: _tracker.py
anna_calories/utils/: const.py
calorie-tracker/domain/: __init__.py  _athlete.py  _food_logger.py
calorie-tracker/scripts/: run.py
calorie-tracker/service_layer/: crawler.py
calorie-tracker/utils/: const.py
data/: brisket-and-sides.csv  chicken-jambalaya.csv  drunken-noodles.csv  gnocchis-a-la-vodka.csv  steak-au-poivre.csv
tests/: test_anna_calories.py
